# pwm-fan-control

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg
src/etc/default/: pwm-fan-control.yaml
src/etc/systemd/system/: pwm-fan-control.service
src/pwm_fan_control/: run.py
src/pwm_fan_control/installer/etc/default/: pwm-fan-control.yaml
src/pwm_fan_control/installer/etc/systemd/system/: pwm-fan-control.service
src/usr/local/sbin/: pwm-fan-control.py
