[bdist_wheel]
universal = 0

[metadata]
name = PWM Fan Control
version = attr: pwm_fan_control.__version__
license = MIT
license_file = LICENSE
description = PWM Fan Speed Control
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael Hacker
author_email = mh@superbox.one
url = https://github.com/mh-superbox/pwm-fan-control
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pwm-fan-control = pwm_fan_control.run:main

[flake8]
max-line-length = 120
max-complexity = 12
select = C,E,F,W,B,B901
ignore = E501,D100,D101,D102,D103,D104,D107,D105,W504

[check-manifest]
ignore-bad-ideas = *.mo
